[package]
name = "guser"
version = "0.1.1"
authors = ["sunsunmonkey <2933201543@qq.com>"]
edition = "2021"
license = "MIT"
description = "easy to change your git user name and user email"
repository = "https://github.com/sunsunmonkey/gituser"
homepage = "https://github.com/sunsunmonkey/gituser"
readme = "README.md"

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
inquire = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"